--- a/kubernetes_deployment.yml
+++ b/kubernetes_deployment.yml
@@ -18,7 +18,7 @@ spec:
         - containerPort: 8080
           protocol: TCP
       imagePullSecrets:
-      - name: ocirsecretname  
+      - name: ocirsecret  
       restartPolicy: Always
 ---
 apiVersion: v1
